--- a/package.json
+++ b/package.json
@@ -5,21 +5,35 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
+    "dev": "nodemon --watch server server --exec babel-node",
+    "build": "babel server -d dist-server && next build",
+    "start": "NODE_ENV=production node ./dist-server/server.js",
     "precommit": "lint-staged"
   },
   "lint-staged": {
-    "react/**/*.js": ["prettier --write", "./node_modules/.bin/eslint --fix", "git add"],
-    "redux/**/*.js": ["prettier --write", "./node_modules/.bin/eslint --fix", "git add"],
-    "pages/**/*.js": ["prettier --write", "./node_modules/.bin/eslint --fix", "git add"],
-    "**/*.css": ["prettier --write", "git add"]
+    "react/**/*.js": [
+      "prettier --write",
+      "./node_modules/.bin/eslint --fix",
+      "git add"
+    ],
+    "redux/**/*.js": [
+      "prettier --write",
+      "./node_modules/.bin/eslint --fix",
+      "git add"
+    ],
+    "pages/**/*.js": [
+      "prettier --write",
+      "./node_modules/.bin/eslint --fix",
+      "git add"
+    ],
+    "**/*.css": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
-    "url":
-      "git+https://Nishchit14@github.com/starlightgroup/American-Science-CBD-ReactJS-App-v2.git"
+    "url": "git+https://Nishchit14@github.com/starlightgroup/American-Science-CBD-ReactJS-App-v2.git"
   },
   "author": "",
   "license": "ISC",
@@ -37,13 +51,21 @@
     "babel-plugin-module-resolver": "3.1.1",
     "babel-polyfill": "6.26.0",
     "babel-preset-stage-0": "6.24.1",
+    "body-parser": "1.18.2",
+    "compression": "1.7.2",
+    "cookie-parser": "1.4.3",
     "dotenv": "5.0.1",
+    "express": "4.16.3",
+    "express-jwt": "5.3.1",
+    "express-useragent": "1.0.12",
     "icepick": "2.3.0",
     "idx": "2.3.0",
+    "moment": "2.22.1",
     "next": "5.1.0",
     "next-redux-saga": "2.0.1",
     "next-redux-wrapper": "1.3.5",
     "node-sass": "4.8.3",
+    "planner": "0.0.1",
     "postcss-easy-import": "3.0.0",
     "postcss-url": "7.3.2",
     "react": "16.3.2",
@@ -65,6 +87,7 @@
     "eslint-plugin-react": "7.4.0",
     "husky": "0.14.3",
     "lint-staged": "7.0.4",
+    "nodemon": "1.17.3",
     "prettier": "1.12.1",
     "redux-devtools-extension": "2.13.2"
   }
