--- a/.gitignore
+++ b/.gitignore
@@ -1,104 +1,3 @@
-### Node ###
-
-# Logs
-logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Optional npm cache directory
-.npm
-
-# Dependency directories
-/node_modules
-/jspm_packages
-/bower_components
-
-# Yarn Integrity file
-.yarn-integrity
-
-# Optional eslint cache
-.eslintcache
-
-# dotenv environment variables file(s)
-.env
-.env.*
-
-#Build generated
-dist/
-build/
-.next/
-
-### SublimeText ###
-# cache files for sublime text
-*.tmlanguage.cache
-*.tmPreferences.cache
-*.stTheme.cache
-
-# workspace files are user-specific
-*.sublime-workspace
-
-# project files should be checked into the repository, unless a significant
-# proportion of contributors will probably not be using SublimeText
-# *.sublime-project
-
-
-### VisualStudioCode ###
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-
-### Vim ###
-*.sw[a-p]
-
-### WebStorm/IntelliJ ###
-/.idea
-modules.xml
-*.ipr
-
-
-### System Files ###
-.DS_Store
-
-# Windows thumbnail cache files
-Thumbs.db
-ehthumbs.db
-ehthumbs_vista.db
-
-# Folder config file
-Desktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-.DS_Store
-
-.next/
-node_modules/
-npm-debug.log
-build/
-data/
-*.*~
-
-.idea
-.env
-dist-server/
-logs/
-
 # OSX
 #
 .DS_Store
@@ -108,3 +7,8 @@ logs/
 node_modules/
 npm-debug.log
 yarn-error.log
+
+#dist
+dist/
+.next/
+.env
