--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "redux-actions": "2.3.0",
     "redux-form": "7.3.0",
     "redux-saga": "0.16.0",
-    "uglifyjs-webpack-plugin": "1.2.5"
+    "uglifyjs-webpack-plugin": "1.2.5",
+    "yarn": "^1.6.0"
   },
   "devDependencies": {
     "eslint": "4.9.0",
