--- a/package.json
+++ b/package.json
@@ -84,8 +84,12 @@
     "planner": "0.0.1",
     "postcss-easy-import": "3.0.0",
     "postcss-url": "7.3.2",
+    "rc-phone-input": "^1.0.16",
     "react": "16.3.2",
     "react-dom": "16.3.2",
+    "react-no-ssr": "^1.1.0",
+    "react-phone-input-2": "^2.2.1",
+    "react-phone-number-input": "^1.0.11",
     "react-redux": "5.0.7",
     "redux": "4.0.0",
     "redux-actions": "2.3.0",
