--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   "dependencies": {
     "@zeit/next-sass": "0.1.2",
     "autoprefixer": "8.3.0",
-    "axios": "0.18.0",
+    "axios": "^0.18.0",
     "babel-cli": "6.26.0",
     "babel-eslint": "8.2.3",
     "babel-plugin-idx": "2.2.0",
