--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "body-parser": "1.18.2",
     "compression": "1.7.2",
     "cookie-parser": "1.4.3",
+    "credit-card-type": "6.3.0",
     "dotenv": "5.0.1",
     "express": "4.16.3",
     "express-jwt": "5.3.1",
