--- a/package.json
+++ b/package.json
@@ -12,44 +12,18 @@
     "precommit": "lint-staged"
   },
   "lint-staged": {
-    "react/**/*.js": [
-      "prettier --write",
-      "./node_modules/.bin/eslint --fix",
-      "git add"
-    ],
-    "redux/**/*.js": [
-      "prettier --write",
-      "./node_modules/.bin/eslint --fix",
-      "git add"
-    ],
-    "pages/**/*.js": [
-      "prettier --write",
-      "./node_modules/.bin/eslint --fix",
-      "git add"
-    ],
-    "react/**/*.jsx": [
-      "prettier --write",
-      "./node_modules/.bin/eslint --fix",
-      "git add"
-    ],
-    "redux/**/*.jsx": [
-      "prettier --write",
-      "./node_modules/.bin/eslint --fix",
-      "git add"
-    ],
-    "pages/**/*.jsx": [
-      "prettier --write",
-      "./node_modules/.bin/eslint --fix",
-      "git add"
-    ],
-    "**/*.css": [
-      "prettier --write",
-      "git add"
-    ]
+    "react/**/*.js": ["prettier --write", "./node_modules/.bin/eslint --fix", "git add"],
+    "redux/**/*.js": ["prettier --write", "./node_modules/.bin/eslint --fix", "git add"],
+    "pages/**/*.js": ["prettier --write", "./node_modules/.bin/eslint --fix", "git add"],
+    "react/**/*.jsx": ["prettier --write", "./node_modules/.bin/eslint --fix", "git add"],
+    "redux/**/*.jsx": ["prettier --write", "./node_modules/.bin/eslint --fix", "git add"],
+    "pages/**/*.jsx": ["prettier --write", "./node_modules/.bin/eslint --fix", "git add"],
+    "**/*.css": ["prettier --write", "git add"]
   },
   "repository": {
     "type": "git",
-    "url": "git+https://Nishchit14@github.com/starlightgroup/American-Science-CBD-ReactJS-App-v2.git"
+    "url":
+      "git+https://Nishchit14@github.com/starlightgroup/American-Science-CBD-ReactJS-App-v2.git"
   },
   "author": "",
   "license": "ISC",
@@ -75,7 +49,6 @@
     "express": "4.16.3",
     "express-jwt": "5.3.1",
     "express-useragent": "1.0.12",
-    "fs": "0.0.1-security",
     "icepick": "2.3.0",
     "idx": "2.3.0",
     "moment": "2.22.1",
@@ -86,12 +59,8 @@
     "planner": "0.0.1",
     "postcss-easy-import": "3.0.0",
     "postcss-url": "7.3.2",
-    "rc-phone-input": "^1.0.16",
     "react": "16.3.2",
     "react-dom": "16.3.2",
-    "react-no-ssr": "^1.1.0",
-    "react-phone-input-2": "^2.2.1",
-    "react-phone-number-input": "^1.0.11",
     "react-redux": "5.0.7",
     "react-slick": "0.23.1",
     "redux": "4.0.0",
