--- a/package.json
+++ b/package.json
@@ -12,18 +12,44 @@
     "precommit": "lint-staged"
   },
   "lint-staged": {
-    "react/**/*.js": ["prettier --write", "./node_modules/.bin/eslint --fix", "git add"],
-    "redux/**/*.js": ["prettier --write", "./node_modules/.bin/eslint --fix", "git add"],
-    "pages/**/*.js": ["prettier --write", "./node_modules/.bin/eslint --fix", "git add"],
-    "react/**/*.jsx": ["prettier --write", "./node_modules/.bin/eslint --fix", "git add"],
-    "redux/**/*.jsx": ["prettier --write", "./node_modules/.bin/eslint --fix", "git add"],
-    "pages/**/*.jsx": ["prettier --write", "./node_modules/.bin/eslint --fix", "git add"],
-    "**/*.css": ["prettier --write", "git add"]
+    "react/**/*.js": [
+      "prettier --write",
+      "./node_modules/.bin/eslint --fix",
+      "git add"
+    ],
+    "redux/**/*.js": [
+      "prettier --write",
+      "./node_modules/.bin/eslint --fix",
+      "git add"
+    ],
+    "pages/**/*.js": [
+      "prettier --write",
+      "./node_modules/.bin/eslint --fix",
+      "git add"
+    ],
+    "react/**/*.jsx": [
+      "prettier --write",
+      "./node_modules/.bin/eslint --fix",
+      "git add"
+    ],
+    "redux/**/*.jsx": [
+      "prettier --write",
+      "./node_modules/.bin/eslint --fix",
+      "git add"
+    ],
+    "pages/**/*.jsx": [
+      "prettier --write",
+      "./node_modules/.bin/eslint --fix",
+      "git add"
+    ],
+    "**/*.css": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
-    "url":
-      "git+https://Nishchit14@github.com/starlightgroup/American-Science-CBD-ReactJS-App-v2.git"
+    "url": "git+https://Nishchit14@github.com/starlightgroup/American-Science-CBD-ReactJS-App-v2.git"
   },
   "author": "",
   "license": "ISC",
@@ -44,7 +70,7 @@
     "body-parser": "1.18.2",
     "compression": "1.7.2",
     "cookie-parser": "1.4.3",
-    "credit-card-type": "6.3.0",
+    "credit-card-type": "^6.3.0",
     "dotenv": "5.0.1",
     "express": "4.16.3",
     "express-jwt": "5.3.1",
@@ -68,7 +94,7 @@
     "redux-form": "7.3.0",
     "redux-saga": "0.16.0",
     "uglifyjs-webpack-plugin": "1.2.5",
-    "validator": "10.0.0",
+    "validator": "^10.0.0",
     "yarn": "^1.6.0"
   },
   "devDependencies": {
