--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "express-useragent": "1.0.12",
     "icepick": "2.3.0",
     "idx": "2.3.0",
+    "jquery": "3.3.1",
     "moment": "2.22.1",
     "next": "5.1.0",
     "next-redux-saga": "2.0.1",
@@ -87,6 +88,7 @@
     "postcss-url": "7.3.2",
     "react": "16.3.2",
     "react-dom": "16.3.2",
+    "react-modal": "3.4.4",
     "react-redux": "5.0.7",
     "react-slick": "0.23.1",
     "redux": "4.0.0",
