Wiring redis on next and ratelimiting

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "babel-preset-stage-0": "6.24.1",
     "body-parser": "1.18.2",
     "compression": "1.7.2",
+    "connect-redis": "3.3.3",
     "cookie-parser": "1.4.3",
     "credit-card-type": "^6.3.0",
     "dotenv": "5.0.1",
@@ -78,6 +79,7 @@
     "express-useragent": "1.0.12",
     "icepick": "2.3.0",
     "idx": "2.3.0",
+    "ioredis": "3.2.2",
     "jquery": "3.3.1",
     "moment": "2.22.1",
     "next": "5.1.0",
