--- a/package.json
+++ b/package.json
@@ -58,15 +58,17 @@
   },
   "homepage": "https://github.com/starlightgroup/American-Science-CBD-ReactJS-App-v2#readme",
   "dependencies": {
+    "@babel/cli": "7.0.0-beta.44",
+    "@babel/core": "7.0.0-beta.44",
+    "@babel/polyfill": "7.0.0-beta.44",
+    "@babel/preset-env": "7.0.0-beta.47",
+    "@babel/preset-stage-0": "7.0.0-beta.44",
     "@zeit/next-sass": "0.1.2",
     "autoprefixer": "8.3.0",
     "axios": "^0.18.0",
-    "babel-cli": "6.26.0",
     "babel-eslint": "8.2.3",
     "babel-plugin-idx": "2.2.0",
     "babel-plugin-module-resolver": "3.1.1",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-stage-0": "6.24.1",
     "body-parser": "1.18.2",
     "compression": "1.7.2",
     "connect-redis": "3.3.3",
@@ -83,9 +85,9 @@
     "jquery": "3.3.1",
     "moment": "2.22.1",
     "morgan": "1.9.0",
-    "next": "5.1.0",
-    "next-redux-saga": "2.0.1",
-    "next-redux-wrapper": "1.3.5",
+    "next": "6.0.3",
+    "next-redux-saga": "3.0.0-beta.1",
+    "next-redux-wrapper": "2.0.0-beta.6",
     "node-sass": "4.8.3",
     "planner": "0.0.1",
     "postcss-easy-import": "3.0.0",
@@ -110,6 +112,7 @@
     "yarn": "^1.6.0"
   },
   "devDependencies": {
+    "@babel/node": "7.0.0-beta.44",
     "eslint": "4.9.0",
     "eslint-config-airbnb": "16.1.0",
     "eslint-import-resolver-babel-module": "4.0.0",
