--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "postcss-easy-import": "3.0.0",
     "postcss-url": "7.3.2",
     "range_check": "1.4.0",
+    "raven": "2.6.2",
     "react": "16.3.2",
     "react-collapsible": "^2.2.0",
     "react-dom": "16.3.2",
