--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "ioredis": "3.2.2",
     "jquery": "3.3.1",
     "moment": "2.22.1",
+    "morgan": "1.9.0",
     "next": "5.1.0",
     "next-redux-saga": "2.0.1",
     "next-redux-wrapper": "1.3.5",
