--- a/package.json
+++ b/package.json
@@ -61,12 +61,11 @@
     "@babel/cli": "7.0.0-beta.44",
     "@babel/core": "7.0.0-beta.44",
     "@babel/polyfill": "7.0.0-beta.44",
-    "@babel/preset-env": "7.0.0-beta.47",
+    "@babel/preset-env": "7.0.0-beta.44",
     "@babel/preset-stage-0": "7.0.0-beta.44",
-    "@zeit/next-sass": "0.1.2",
     "autoprefixer": "8.3.0",
     "axios": "^0.18.0",
-    "babel-eslint": "8.2.3",
+    "babel-eslint": "8.1.0",
     "babel-plugin-idx": "2.2.0",
     "babel-plugin-module-resolver": "3.1.1",
     "body-parser": "1.18.2",
@@ -88,7 +87,6 @@
     "next": "6.0.3",
     "next-redux-saga": "3.0.0-beta.1",
     "next-redux-wrapper": "2.0.0-beta.6",
-    "node-sass": "4.8.3",
     "planner": "0.0.1",
     "postcss-easy-import": "3.0.0",
     "postcss-url": "7.3.2",
@@ -113,13 +111,13 @@
   },
   "devDependencies": {
     "@babel/node": "7.0.0-beta.44",
-    "eslint": "4.9.0",
+    "eslint": "^4.9.0",
     "eslint-config-airbnb": "16.1.0",
-    "eslint-import-resolver-babel-module": "4.0.0",
+    "eslint-import-resolver-babel-module": "5.0.0-beta.0",
     "eslint-plugin-babel": "5.1.0",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "6.0.2",
-    "eslint-plugin-react": "7.4.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "husky": "0.14.3",
     "lint-staged": "7.0.4",
     "nodemon": "1.17.3",
