--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
   },
   "homepage": "https://github.com/starlightgroup/American-Science-CBD-ReactJS-App-v2#readme",
   "dependencies": {
+    "@babel/cli": "7.0.0-beta.44",
+    "@babel/core": "7.0.0-beta.44",
     "@babel/polyfill": "7.0.0-beta.44",
     "@babel/preset-env": "7.0.0-beta.44",
     "@babel/preset-stage-0": "7.0.0-beta.44",
@@ -108,10 +110,7 @@
     "yarn": "^1.6.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.44",
-    "@babel/core": "^7.0.0-beta.44",
     "@babel/node": "7.0.0-beta.44",
-    "babel-preset-env": "^1.7.0",
     "eslint": "^4.9.0",
     "eslint-config-airbnb": "16.1.0",
     "eslint-import-resolver-babel-module": "5.0.0-beta.0",
