--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "react": "16.3.2",
     "react-collapsible": "^2.2.0",
     "react-dom": "16.3.2",
+    "react-lazyload": "2.3.0",
     "react-modal": "3.4.4",
     "react-redux": "5.0.7",
     "react-slick": "0.23.1",
@@ -106,8 +107,7 @@
     "uglifyjs-webpack-plugin": "1.2.5",
     "validator": "^10.0.0",
     "winston": "2.4.2",
-    "xss": "0.3.8",
-    "yarn": "^1.6.0"
+    "xss": "0.3.8"
   },
   "devDependencies": {
     "@babel/node": "7.0.0-beta.44",
