--- a/package.json
+++ b/package.json
@@ -107,7 +107,8 @@
     "uglifyjs-webpack-plugin": "1.2.5",
     "validator": "^10.0.0",
     "winston": "2.4.2",
-    "xss": "0.3.8"
+    "xss": "0.3.8",
+    "yarn": "^1.6.0"
   },
   "devDependencies": {
     "@babel/node": "7.0.0-beta.44",
