--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "NODE_ENV=production node ./dist/index.js",
     "generate-docs": "./node_modules/.bin/jsdoc react/* redux/* server/* helpers/* -r",
     "postinstall": "yarn build",
-    "precommit": "lint-staged"
+    //"precommit": "lint-staged"
   },
   "lint-staged": {
     "react/**/*.js": [
