--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "babel server -d dist && next build",
     "start": "NODE_ENV=production node ./dist/index.js",
     "generate-docs": "./node_modules/.bin/jsdoc react/* redux/* server/* helpers/* -r",
-    "postinstall": "yarn build"
+    "postinstall": "yarn build",
+    "precommit": "lint-staged"
   },
   "lint-staged": {
     "react/**/*.js": [
