--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "next": "6.0.3",
     "next-redux-saga": "3.0.0-beta.1",
     "next-redux-wrapper": "2.0.0-beta.6",
+    "path": "^0.12.7",
     "planner": "0.0.1",
     "postcss-easy-import": "3.0.0",
     "postcss-url": "7.3.2",
