--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "react-modal": "3.4.4",
     "react-redux": "5.0.7",
     "react-slick": "0.23.1",
+    "react-waypoint": "8.1.0",
     "redux": "4.0.0",
     "redux-actions": "2.3.0",
     "redux-form": "7.3.0",
