--- a/example.env
+++ b/example.env
@@ -1,5 +1,5 @@
 PORT=3001
-API_BASE_URL=https://americanscienceapi-staging1.herokuapp.com/api
+API_BASE_URL=https://komodo-api-staging.herokuapp.com/api
 ABTASTY_BASE_URL=https://beta-serverside.abtasty.com/v1
 ABTASTY_API_KEY=AIzaSyAuUU2Xfu_Yhi67LMiDRk9-IYcKAkP4Big
 REDIS_URL=redis://127.0.0.1:6379/
